CHANGES for LIRE
================

2015-08-26
==========
  - Indexing based on Metric Spaces mostly finished, with some tests still to be done.
    see MetricSpacesTest for samples.
  - Change in file handling in ParallelIndexer, now using MappedByteBuffer / NIO.
  - Added support for hash method selection to GlobalDocumentBuilder and ParallelIndexer

2015-08-20
==========
  - Converted ParallelExtractor to using LinkedBlockingQueue

2015-08-20
==========
  - Speeded up extraction of PHOG by ~ 40%.

2015-08-17
==========
  - Added a speed fix for Extraction of FCTH and CEDD based on a diff from from
    Michael Riegler (https://www.simula.no/people/michael) &
    Konstantin Pogorelov (https://www.simula.no/people/konstantinvpogorelov)

2015-06-17
==========
  - Added custom DocumentBuilder for handling metadata to ParallelIndexer.
  - Fixed LIRE demo.
  - Worked on the developer docs.

2015-06-16
==========
  - updated to Lucene 5.2.1, fixed simpleapplication to go with Lucene 5.2.1

2015-06-10
==========
  - Lire 1.0 beta, extreme changelist, massive API changes, by Nektarios.

2015-02-13
==========
  - Bug fix in LireDemo build file
  
2015-02-13
==========
  - SimpleBuilder: Changed size selection to lookup table. -> 12% faster.
  - SimpleBuilder: Reduced String concats & "new" in loops.

2015-02-10
==========
  - bug fix in BOVWBuilder based on bug report by Haihui Cai

2015-01-18
==========
  - Added custom implementation of a caching searcher
  - fixed a performance issue in GenericFastImageSearcher
  - refactored weka depending classes into a sample directory

2015-01-16
==========
  - Made output of ParallelIndexer more readable.
  - Added a getter to CEDD

2015-01-15
==========
  - Updated documentation

2015-01-02
==========
  - Moved documentation from online wiki to .md files. Using tool from mkdocs.org top generate static online site.

2014-12-18
==========