@@ -1,6 +1,12 @@
 CHANGES for LIRE
 ================
 
+2015-09-04
+==========
+  - Documentation, error message updates.
+  - implemented and tested net.semanticmetadata.lire.searchers.MetricSpacesImageSearcher, on 100k images it
+    had similar performance to in-memory search w/o the startup delay.
+
 2015-08-26
 ==========
   - Indexing based on Metric Spaces mostly finished, with some tests still to be done.
